--- a/requirements-mac.txt
+++ b/requirements-mac.txt
@@ -3,7 +3,7 @@ mediapipe-silicon==0.8.10.1
 keras==2.9.0
 keras-tuner==1.1.3
 tensorflow-macos==2.9.2
-sklearn==1.1.2
+scikit-learn==1.1.2
 numpy==1.23.3
 panda==1.4.3
 matplotlib==3.6.0
