--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,16 @@
 opencv-python==4.6.0.66
-mediapipe
+mediapipe==0.9.3.0
 keras==2.9.0
 keras-tuner==1.1.3
-scikit-learn==1.1.2
+tensorflow-macos==2.15.1
 numpy==1.23.3
-panda==1.4.3
+scikit-learn==1.1.2
+pandas==1.4.3
 matplotlib==3.6.0
 seaborn==0.12.0
 yellowbrick==1.5
-Django==4.1.2
+Django==4.2.13
 djangorestframework==3.14.0
 django-cors-headers==3.13.0
 django-extensions==3.2.1
-protobuf==3.20.*
+protobuf==3.20.3
