--- a/web/client/package.json
+++ b/web/client/package.json
@@ -1,6 +1,7 @@
 {
     "name": "exercise-correction",
     "version": "0.0.0",
+    "type": "module",
     "scripts": {
         "dev": "vite",
         "build": "vite build",
