--- a/requirements_mac2.txt
+++ b/requirements_mac2.txt
@@ -84,8 +84,8 @@ MarkupSafe==2.1.5
 matplotlib==3.6.0
 matplotlib-inline==0.1.7
 mdurl==0.1.2
-mediapipe==0.9.3.0
-mediapipe-silicon==0.8.10.1
+# mediapipe==0.9.3.0
+# mediapipe-silicon==0.8.10.1
 mistune==3.0.2
 ml-dtypes==0.4.0
 namex==0.0.8
@@ -111,7 +111,7 @@ pillow==10.4.0
 platformdirs==4.3.2
 prometheus_client==0.20.0
 prompt_toolkit==3.0.47
-protobuf==3.20.3
+# protobuf==3.20.3
 psutil==6.0.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
@@ -144,10 +144,10 @@ sounddevice==0.5.0
 soupsieve==2.6
 sqlparse==0.5.1
 stack-data==0.6.3
-tensorboard==2.9.1
+# tensorboard==2.9.1
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.1
-tensorflow==2.17.0
+# tensorflow==2.17.0
 tensorflow-estimator==2.9.0
 tensorflow-io-gcs-filesystem==0.37.1
 tensorflow-macos==2.9.2
