--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     },
     "homepage": "https://github.com/CreamMeatball/TrAiAngle",
     "dependencies": {
+        "localtunnel": "^2.0.2",
         "vite": "^5.4.6"
     }
 }
